--- a/01_手写数字识别/Pytorch实战项目01：手写数字识别.ipynb
+++ b/01_手写数字识别/Pytorch实战项目01：手写数字识别.ipynb
@@ -186,14 +186,14 @@
     "                           transforms.ToTensor(),\n",
     "                           transforms.Normalize((0.1307,), (0.3081,))\n",
     "                       ])),\n",
-    "        batch_size=BATCH_SIZE, shuffle=True)\n",
+    "        batch_size=batch_size, shuffle=True)\n",
     "\n",
     "test_loader = torch.utils.data.DataLoader(\n",
     "        datasets.MNIST('data', train=False, transform=transforms.Compose([\n",
     "                           transforms.ToTensor(),\n",
     "                           transforms.Normalize((0.1307,), (0.3081,))\n",
     "                       ])),\n",
-    "        batch_size=BATCH_SIZE, shuffle=True)"
+    "        batch_size=batch_size, shuffle=True)"
    ]
   },
   {
